--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,44 @@
+name: Python application
+
+on:
+  push:
+    branches:
+      - master  # تأكد من تطابق اسم الفرع مع الفرع الذي تستخدمه في مستودعك
+  pull_request:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run tests
+      run: |
+        # تنفيذ اختباراتك هنا، إذا كنت تستخدمها
+        # على سبيل المثال: pytest
+        pytest
+
+    - name: Build application
+      run: |
+        # بناء تطبيقك، إذا لزم الأمر
+        python setup.py build
+
+    - name: Deploy
+      run: |
+        # خطوات النشر، إذا كانت ضرورية
+        echo "Deploying application"
 
